--- a/app.json
+++ b/app.json
@@ -26,14 +26,20 @@
       },
       {
         "pagePath": "pages/category/category",
+        "iconPath": "static/tabbar/home-icon2.png",
+        "selectedIconPath": "static/tabbar/home-icon2-2.png",
         "text":"分类"
       },
       {
         "pagePath": "pages/cart/cart",
+        "iconPath": "static/tabbar/home-icon3.png",
+        "selectedIconPath": "static/tabbar/home-icon3-3.png",
         "text":"购物车"
       },
       {
         "pagePath": "pages/personal/personal",
+        "iconPath": "static/tabbar/home-icon4.png",
+        "selectedIconPath": "static/tabbar/home-icon4-4.png",
         "text":"我的"
       }
       ]
