--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "pages/index/index",
     "pages/category/category",
     "pages/cart/cart",
+    "pages/login/login",
     "pages/goods/detail/detail",
     "pages/goods/list/list",
     "pages/personal/personal"
